...

  @override
  String get home_subtitle =>
      'Learn about the life of the Prophet Mohammed (SWS)';

  @override
  String get home_start => 'Start Quiz';

  @override
  String get home_settings => 'Settings';

  @override
  String get home_about => 'About';
...
